--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -30,6 +30,7 @@
     font-weight: bold;
     color: white;
     background-color: #30005d;
+    /*background-color: #002855;*/
     border: 1px solid white;
     padding: 0.5rem;
     border-radius: 12px;
