--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -1,5 +1,6 @@
 .new-expense {
     background-color: #a892ee;
+    /*background-color: #0353a4;*/
     padding: 1rem;
     margin: 2rem auto;
     width: 50rem;
@@ -14,7 +15,9 @@
     cursor: pointer;
     padding: 1rem 2rem;
     border: 1px solid #40005d;
+    /*border: 1px solid #002855;*/
     background-color: #40005d;
+    /*background-color: #002855;*/
     color: white;
     border-radius: 12px;
     margin-right: 1rem;
@@ -23,11 +26,14 @@
 .new-expense button:hover,
 .new-expense button:active {
     background-color: #510674;
+    /*background-color: #0293DC;*/
     border-color: #510674;
+    /*border-color: #0293DC;*/
 }
 
 .new-expense button.alternative {
     color: #220131;
+    /*color: #002855;*/
     border-color: transparent;
     background-color: transparent;
 }
@@ -35,4 +41,5 @@
 .new-expense button.alternative:hover,
 .new-expense button.alternative:active {
     background-color: #ddb3f8;
+    /*background-color: #0293DC;*/
 }
